feat(): test github package registry

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -17,8 +17,10 @@ jobs:
           node-version: 16
       - run: npm install
       - run: npm run build
+        env:
+          CI: false
       - run: |
-          echo @lexacode:https://npm.pkg.github.com/ > build/.npmrc
+          echo @qweghj1245:https://npm.pkg.github.com/ > build/.npmrc
           echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
       - run: npm publish
         working-directory: ./build
