feat(): update console

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publishConfig": {
     "@qweghj1245:registry": "https://npm.pkg.github.com"
   },
-  "main": "src/index.tsx",
+  "main": "src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
