feat(): update components

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@qweghj1245:registry": "https://npm.pkg.github.com"
   },
   "main": "src/index.js",
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
