--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "publishConfig": {
     "@qweghj1245:registry": "https://npm.pkg.github.com"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
-    "dist",
-    "README.md"
+    "dist"
   ],
   "license": "MIT",
   "dependencies": {
