--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 @qweghj1245:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+# if need to deploy on local, open this line
+# //npm.pkg.github.com/:_authToken=${NPM_TOKEN}
