--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,8 +1,9 @@
 name: Node.js Package
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - "**"
 
 jobs:
   publish-gpr:
@@ -17,6 +18,9 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
       - run: npm install
+      - run: git config --global user.name "${{ github.actor }}"
+      - run: git config --global user.email "github-action-${{ github.actor }}@users.noreply.github.com"
+      - run: npm version ${{ github.event.release.tag_name }}
       - run: npm run build
       - run: npm publish
         env:
