--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 @qweghj1245:registry=https://npm.pkg.github.com
 # if need to deploy on local, open this line
-# //npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
