--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -19,7 +19,7 @@ jobs:
       - run: npm install
       - run: git config --global user.name "${{ github.actor }}"
       - run: git config --global user.email "github-action-${{ github.actor }}@users.noreply.github.com"
-      - run: npm version ${{ github.event.release.name }}
+      - run: npm version ${{ github.event.release.name }} -f
       - run: npm run build
       - run: npm publish
         env:
